Fix footer overflow again

--- a/styles/Start.module.css
+++ b/styles/Start.module.css
@@ -22,7 +22,7 @@
         height: 100%;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 15% 1fr 15%
+        grid-template-rows: 15% 1fr 25%
     }
 }
 
@@ -32,7 +32,7 @@
         height: 100%;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 20% 1fr 15%
+        grid-template-rows: 20% 1fr 20%
     }
 }
 /* 4K */
